Updated .gitignore and some config files

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_INIT([XSLT processing library], [1.0], [yoreek@yahoo.com],
-        [libxsltp], [http://lalala.com])
+        [libxsltp], [https://github.com/yoreek/libxsltp/])
 AC_PREREQ([2.59])
 AM_INIT_AUTOMAKE([1.10 -Wall no-define])
 
