--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,35 @@
 *.dylib
 
 # Executables
+/xslt_processor/xslt_processor
 *.exe
 *.out
 *.app
+
+#files being edited
+*~
+
+# http://www.gnu.org/software/automake
+Makefile
+Makefile.in
+.deps
+.libs
+*.la
+*.lo
+*.so
+
+# http://www.gnu.org/software/autoconf
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
+/config.log
+/config.h
+/config.status
+/libtool
+/stamp-h
+/stamp-h.in
+/stamp-h1
