Updated configure script

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Place generated object files (.o) into the same directory as their source
 ## files, in order to avoid collisions when non-recursive make is used.
+ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign
-
 SUBDIRS = libxsltp xslt_processor
