--- a/xslt_processor/Makefile.in
+++ b/xslt_processor/Makefile.in
@@ -143,6 +143,9 @@ NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OPENSSL_CPPFLAGS = @OPENSSL_CPPFLAGS@
+OPENSSL_LDFLAGS = @OPENSSL_LDFLAGS@
+OPENSSL_LIBS = @OPENSSL_LIBS@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
@@ -160,6 +163,7 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 THREAD_LIBS = @THREAD_LIBS@
 VERSION = @VERSION@
+WITH_OPENSSL = @WITH_OPENSSL@
 WITH_THREADS = @WITH_THREADS@
 XSLT_CONFIG = @XSLT_CONFIG@
 abs_builddir = @abs_builddir@
