--- a/libxsltp/Makefile.am
+++ b/libxsltp/Makefile.am
@@ -1,6 +1,6 @@
 AM_CPPFLAGS = -I$(top_srcdir)
-AM_CFLAGS = $(LIBXSLT_CFLAGS)
-AM_LDFLAGS = $(LIBXSLT_LIBS) $(THREAD_LIBS) -lssl
+AM_CFLAGS = $(LIBXSLT_CFLAGS) $(OPENSSL_CFLAGS)
+AM_LDFLAGS = $(LIBXSLT_LIBS) $(THREAD_LIBS) $(OPENSSL_LIBS)
 
 lib_LTLIBRARIES = libxsltp-1.0.la
 libxsltp_1_0_la_SOURCES =                   \
