--- a/libxsltp/Makefile.in
+++ b/libxsltp/Makefile.in
@@ -172,6 +172,9 @@ NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OPENSSL_CPPFLAGS = @OPENSSL_CPPFLAGS@
+OPENSSL_LDFLAGS = @OPENSSL_LDFLAGS@
+OPENSSL_LIBS = @OPENSSL_LIBS@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
@@ -189,6 +192,7 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 THREAD_LIBS = @THREAD_LIBS@
 VERSION = @VERSION@
+WITH_OPENSSL = @WITH_OPENSSL@
 WITH_THREADS = @WITH_THREADS@
 XSLT_CONFIG = @XSLT_CONFIG@
 abs_builddir = @abs_builddir@
@@ -244,8 +248,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)
-AM_CFLAGS = $(LIBXSLT_CFLAGS)
-AM_LDFLAGS = $(LIBXSLT_LIBS) $(THREAD_LIBS) -lssl
+AM_CFLAGS = $(LIBXSLT_CFLAGS) $(OPENSSL_CFLAGS)
+AM_LDFLAGS = $(LIBXSLT_LIBS) $(THREAD_LIBS) $(OPENSSL_LIBS)
 lib_LTLIBRARIES = libxsltp-1.0.la
 libxsltp_1_0_la_SOURCES = \
             xsltp.c                         \
