Updated version number

--- a/libxsltp/Makefile.am
+++ b/libxsltp/Makefile.am
@@ -2,8 +2,8 @@ AM_CPPFLAGS = -I$(top_srcdir)
 AM_CFLAGS = $(LIBXSLT_CFLAGS) $(OPENSSL_CFLAGS)
 AM_LDFLAGS = $(LIBXSLT_LIBS) $(THREAD_LIBS) $(OPENSSL_LIBS)
 
-lib_LTLIBRARIES = libxsltp-1.0.la
-libxsltp_1_0_la_SOURCES =                   \
+lib_LTLIBRARIES = libxsltp.la
+libxsltp_la_SOURCES =                       \
             xsltp.c                         \
             xsltp_result.c                  \
             xsltp_document_parser.c         \
