--- a/xslt_processor/Makefile.in
+++ b/xslt_processor/Makefile.in
@@ -70,7 +70,7 @@ PROGRAMS = $(bin_PROGRAMS)
 xslt_processor_SOURCES = xslt_processor.c
 xslt_processor_OBJECTS = xslt_processor.$(OBJEXT)
 xslt_processor_LDADD = $(LDADD)
-xslt_processor_DEPENDENCIES = $(top_srcdir)/libxsltp/libxsltp-1.0.la
+xslt_processor_DEPENDENCIES = $(top_srcdir)/libxsltp/libxsltp.la
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -221,7 +221,7 @@ AM_CPPFLAGS = -I$(top_srcdir)
 AM_CFLAGS = $(LIBXSLT_CFLAGS)
 AM_LDFLAGS = $(LIBXSLT_CFLAGS)
 xslt_processor = xslt_processor.c
-LDADD = $(top_srcdir)/libxsltp/libxsltp-1.0.la
+LDADD = $(top_srcdir)/libxsltp/libxsltp.la
 all: all-am
 
 .SUFFIXES:
