--- a/config.h.in
+++ b/config.h.in
@@ -73,6 +73,9 @@
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
+/* Define if LibXSLT using global max depth */
+#undef USE_LIBEXSLT_GLOBAL_MAX_DEPTH
+
 /* Enable extensions on AIX 3, Interix.  */
 #ifndef _ALL_SOURCE
 # undef _ALL_SOURCE
