--- a/xslt_processor/Makefile.in
+++ b/xslt_processor/Makefile.in
@@ -118,6 +118,8 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
+GLIB_CFLAGS = @GLIB_CFLAGS@
+GLIB_LIBS = @GLIB_LIBS@
 GREP = @GREP@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
@@ -155,6 +157,9 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PKG_CONFIG = @PKG_CONFIG@
+PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
+PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -218,8 +223,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)
-AM_CFLAGS = $(LIBXSLT_CFLAGS)
-AM_LDFLAGS = $(LIBXSLT_CFLAGS)
+AM_CFLAGS = $(LIBXSLT_CFLAGS) $(OPENSSL_CFLAGS) $(LIBICU_CFLAGS) $(GLIB_CFLAGS)
+AM_LDFLAGS = $(LIBXSLT_LIBS) $(THREAD_LIBS) $(OPENSSL_LIBS) $(LIBICU_LIBS) $(GLIB_LIBS)
 xslt_processor = xslt_processor.c
 LDADD = $(top_srcdir)/libxsltp/libxsltp.la
 all: all-am
