--- a/libxsltp/Makefile.in
+++ b/libxsltp/Makefile.in
@@ -299,9 +299,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign libxsltp/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu libxsltp/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign libxsltp/Makefile
+	  $(AUTOMAKE) --gnu libxsltp/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
